[tool.poetry]
name = "deployer"
version = "0.1.0"
license = "MPL-2.0"
description = "Upload the files that Yari built"
authors = ["MDN Devs <mdn-dev@mozilla.com>"]
repository = "https://github.com/mdn/yari"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.7"
boto3 = "^1.34.136"
python-decouple = "^3.8"
requests = {extras = ["security"], version = "^2.32.3"}
elasticsearch-dsl = "^7.4.1"
selectolax = "^0.3.21"
PyGithub = "^1.59"
unidiff = "^0.7.5"

[tool.poetry.dev-dependencies]
black = "^24.4"
flake8 = "^7.1.0"
pytest = "^8.2.2"

[tool.poetry.scripts]
deployer = "deployer.main:cli"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
