[tool.poetry]
name = "deployer"
version = "0.1.0"
license = "MPL-2.0"
description = "Upload the files that Yari built"
authors = ["MDN Devs <mdn-dev@mozilla.com>"]
repository = "https://github.com/mdn/yari"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.8"
boto3 = "^1.36.21"
python-decouple = "^3.8"
requests = {extras = ["security"], version = "^2.32.3"}
elasticsearch-dsl = "^7.4.1"
selectolax = "^0.3.27"
PyGithub = "^1.59"
unidiff = "^0.7.5"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = "^25.1"
flake8 = "^7.1.2"
pytest = "^8.3.4"

[tool.poetry.scripts]
deployer = "deployer.main:cli"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
