[tool.poetry]
name = "deployer"
version = "0.1.0"
license = "MPL-2.0"
description = "Upload the files that Yari built"
authors = ["MDN Devs <mdn-dev@mozilla.com>"]
repository = "https://github.com/mdn/yari"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.2.1"
python-decouple = "^3.8"
elasticsearch-dsl = "^7.4.1"
selectolax = "^0.3.32"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = "^25.1"
flake8 = "^7.3.0"
pytest = "^8.4.1"

[tool.poetry.scripts]
deployer = "deployer.main:cli"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
