[tool.poetry]
name = "integration-testing"
version = "0.1.0"
license = "MPL-2.0"
description = "Integration testing for Yari"
authors = ["MDN Devs <mdn-dev@mozilla.com>"]
repository = "https://github.com/mdn/yari"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.4.3"
pytest-base-url = "^2.0.0"
pytest-rerunfailures = "^12.0"
requests = "^2.31.0"
pyquery = "^2.0.0"
braceexpand = "^0.1.7"

[tool.poetry.dev-dependencies]
black = "^23.10"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
