[tool.poetry]
name = "integration-testing"
version = "0.1.0"
license = "MPL-2.0"
description = "Integration testing for Yari"
authors = ["MDN Devs <mdn-dev@mozilla.com>"]
repository = "https://github.com/mdn/yari"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^8.0.1"
pytest-base-url = "^2.1.0"
pytest-rerunfailures = "^13.0"
requests = "^2.31.0"
pyquery = "^2.0.0"
braceexpand = "^0.1.7"

[tool.poetry.dev-dependencies]
black = "^24.2"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
